[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/explosion.png" type="Texture" id=1]
[ext_resource path="res://weaponsAndProjectiles/explosion.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 5.0

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../../Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Explosion2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../Explosion3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:shape:radius")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "explosion"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("../../Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.65, 1 ),
"update": 0,
"values": [ 0, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Explosion2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.65, 1 ),
"update": 0,
"values": [ 0, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../Explosion3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.8, 1 ),
"update": 0,
"values": [ 0, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:shape:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 5.0, 13.0, 2.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( -1, -3 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../boom/CollisionShape2D")
autoplay = "explosion"
anims/RESET = SubResource( 1 )
anims/explosion = SubResource( 2 )

[node name="Explosion" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8

[node name="Explosion2" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.501961 )
texture = ExtResource( 1 )
hframes = 8

[node name="Explosion3" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.501961 )
texture = ExtResource( 1 )
hframes = 8

[node name="boom" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="boom"]
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="boom" to="." method="_on_boom_area_entered"]
